--- a/Cuda/cuda_zero/.vscode/settings.json
+++ b/Cuda/cuda_zero/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
-        "new": "cpp"
+        "new": "cpp",
+        "utility": "cpp"
     },
     "cmake.configureOnOpen": false
 }
