Added: Cuda_Zero some chapters

--- a/Cuda/cuda_zero/.vscode/settings.json
+++ b/Cuda/cuda_zero/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "files.associations": {
         "new": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "random": "cpp"
     },
     "cmake.configureOnOpen": false
 }
