--- a/Cuda/cuda_handwrite_mlp/project/CMakeLists.txt
+++ b/Cuda/cuda_handwrite_mlp/project/CMakeLists.txt
@@ -4,7 +4,8 @@ project(MLP)
 # 设置C++标准
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
-
+# 设置编译选项为-O2
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
 # 添加include文件夹到头文件搜索路径
 include_directories(include)
 
