Finished: Cuda Handwrite MLP

--- a/Cuda/cuda_handwrite_mlp/project/CMakeLists.txt
+++ b/Cuda/cuda_handwrite_mlp/project/CMakeLists.txt
@@ -1,16 +1,13 @@
 cmake_minimum_required(VERSION 3.10)
-project(MLP)
+project(MyCUDAProject CUDA CXX)
 
-# 设置C++标准
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
-# 设置编译选项为-O2
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
-# 添加include文件夹到头文件搜索路径
+set(CMAKE_CUDA_STANDARD 17)
+
+
+file(GLOB_RECURSE CUDA_SOURCES src/*.cu)
+
 include_directories(include)
 
-# 获取src文件夹中的所有源文件
-file(GLOB SOURCES "src/*.cpp")
+set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -O2")
 
-# 生成可执行文件app
-add_executable(app ${SOURCES})
+add_executable(app ${CUDA_SOURCES})
